# tauri-markdown-reader

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  package.yml
docs/: BUILD_LOG.md  DESIGN.md  HN_SHOW_SUBMISSION.md  PRD.md  PROMOTION.en.md  PROMOTION.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v3.5.md
scripts/: capture-demo-gif.mjs  prepare-cli-sidecar.ps1
src/: App.css  App.tsx  LibrarySidebar.tsx  QuickOpenDialog.tsx  RichMarkdownEditor.tsx  exportHelpers.ts  exportImages.ts  i18n.ts  index.css  librarySearch.ts  markdown.ts  pdf.ts  readerState.ts  types.ts  word.ts  wordStyles.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/help/: markdown-guide.en.md  markdown-guide.zh.md
